--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "joao@byjg.com.br",
   "license": "MIT",
   "dependencies": {
-    "usdocker": "^1.0.*"
+    "usdocker": "^1.0.4"
   },
   "devDependencies": {
     "eslint": "^4.4.1"
