--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "usdocker-redis",
+  "name": "@usdocker/redis",
   "version": "1.0.3",
   "description": "USDocker script for redis ",
   "main": "usdocker_redis.js",
   "scripts": {
     "test": "./node_modules/.bin/eslint *.js",
-    "preinstall": "npm i -g usdocker",
-    "postinstall": "./node_modules/.bin/usdocker -rv"
+    "postinstall": "usdocker -rv"
   },
   "keywords": [
     "usdocker",
